show facebook like button on mobile https://github.com/Strategy11/BusinessDirectoryPlugin/issues/4802

--- a/assets/css/less/wpbdp.less
+++ b/assets/css/less/wpbdp.less
@@ -325,12 +325,6 @@ form#wpbdmsearchform a.advanced-search-link {
 
 }
 
-@media screen and (max-width: 500px) {
-    .social-field.facebook .fb-like > span {
-        width: 100% !important;
-    }
-}
-
 .wpbdp-listing-contact-form {
     margin-top: 20px;
     padding-top: 20px;
